# bet365-re-js

./: .gitignore  README.md  jest.config.js  mitmproxy.sh  new-conda-environment.sh  package-lock.json  package.json  python-dependencies.sh
.github/workflows/: node.js.yml  python-app.yml
mitmproxy/: mitmproxy-ca-cert.pem  requirements-build.txt  requirements-test.txt  requirements.txt
mitmproxy/src/javascript/: .gitignore  deobfuscated.js  obfuscated-code-logger.js  obfuscated-formatted-new.js  obfuscated-formatted-old.js  obfuscated-new-formatted.js  obfuscated-new-raw.js  obfuscated-new.js  obfuscated-original-old.js  post-transform-code.js  post-transform-function[8].js  post-transform-functions[0].js  post-transform-functions[124].js  post-transform-functions[166].js  post-transform-functions[170].js  post-transform-functions[171].js  post-transform-functions[198].js  post-transform-functions[19].js  pre-transform-code.js  (+69 more)
mitmproxy/src/python/: download-payload.py  pyproject.toml  requirements-ci.lock.txt  requirements-ci.txt  requirements-test.lock.txt  requirements-test.txt  requirements.lock.txt  requirements.txt  save_obfuscated_code.py
mitmproxy/src/python/main/: download-payload.py
mitmproxy/src/python/tests/: test_expected_obfuscated_file.py
mitmproxy/src/python/tests/page/: base_page.py  bet_365_home_page.py  cloudflare_challenge_page.py
mitmproxy/src/python/tests/results/: 1746447434.4952288-received-14.js  1746761212.4020648-received-14.js  1748409220.998982-received-14.js  1748566882.7211542-received-14.js  readme.md
output/: .gitignore
(+77 files in other folders)
