[project]
name = "mitmproxy-javascript-extractor"
version = "0.1.0"
description = "A mitmproxy addon for extracting and transforming JavaScript payloads."
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "mitmproxy==11.1.3",
    "jsbeautifier",
    "rjsmin"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black"
]

[build-system]
requires = ["setuptools==80.9.0", "wheel"]
build-backend = "setuptools.build_meta"
